# ra-killer

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  ra-killer.service
src/: i18n.rs  main.rs  theme.rs
