[package]
name = "ra-killer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sysinfo = "0.33"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
# 优化二进制文件大小
opt-level = "z"     # 优化尺寸
lto = true          # 链接时优化
codegen-units = 1   # 单个代码生成单元以优化尺寸
strip = true        # 去除调试符号
panic = "abort"     # 减小 panic 处理开销
