[package]
name = "ra-killer"
version = "0.3.0"
edition = "2021"
authors = ["Liangdi <wu@liangdi.me>"]
description = "Automatically monitor and kill high-memory rust-analyzer processes"
license = "MIT"
repository = "https://github.com/Liangdi/ra-killer"
homepage = "https://github.com/Liangdi/ra-killer"
keywords = ["rust-analyzer", "memory", "monitor", "process", "killer"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sysinfo = "0.39"
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30.1"
crossterm = "0.29"
sys-locale = "0.3"

[profile.release]
# 优化二进制文件大小
opt-level = "z"     # 优化尺寸
lto = true          # 链接时优化
codegen-units = 1   # 单个代码生成单元以优化尺寸
strip = true        # 去除调试符号
panic = "abort"     # 减小 panic 处理开销
